// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`git.release.p3.scenes.on_main.from_feat scene.7: on main branch, --from feat-branch given: [row-1] feat PR: unfound when: [apply] --from feat-branch --apply then: exit 2: crickets, hint push 1`] = `
"🐢 crickets...

🫧 no open branch pr
   ├─ turtle/feature-x
   └─ [dim]hint: use git.commit.push to push and findsert pr[/dim]
"
`;

exports[`git.release.p3.scenes.on_main.from_feat scene.7: on main branch, --from feat-branch given: [row-1] feat PR: unfound when: [plan] --from feat-branch then: exit 2: crickets, hint push 1`] = `
"🐢 crickets...

🫧 no open branch pr
   ├─ turtle/feature-x
   └─ [dim]hint: use git.commit.push to push and findsert pr[/dim]
"
`;

exports[`git.release.p3.scenes.on_main.from_feat scene.7: on main branch, --from feat-branch given: [row-1] feat PR: unfound when: [watch] --from feat-branch --watch then: exit 2: crickets, hint push 1`] = `
"🐢 crickets...

🫧 no open branch pr
   ├─ turtle/feature-x
   └─ [dim]hint: use git.commit.push to push and findsert pr[/dim]
"
`;

exports[`git.release.p3.scenes.on_main.from_feat scene.7: on main branch, --from feat-branch given: [row-4] feat PR: inflight when: [apply] --from feat-branch --apply with transitions then: watch cycles then merged 1`] = `
"🐢 cowabunga!

🐚 git.release --from turtle/feature-x --into main --mode apply --watch

🌊 release: feat(ocean): add surfboards
   ├─ 🐢 1 check(s) in progress
   ├─ 🌴 automerge enabled [added]
   └─ 🥥 let's watch
      ├─ 💤 1 left, Xs in action, Xs watched
      ├─ 💤 1 left, Xs in action, Xs watched
      ├─ 💤 1 left, Xs in action, Xs watched
      ├─ 💤 await automerge, Xs in action, Xs watched
      └─ ✨ done! Xm Ys in action, Xs watched

[dim]🐚 continue?: rhx git.release --into prod --mode apply[/dim]
"
`;

exports[`git.release.p3.scenes.on_main.from_feat scene.7: on main branch, --from feat-branch given: [row-4] feat PR: inflight when: [plan] --from feat-branch then: exit 0: show progress 1`] = `
"🐢 heres the wave...

🐚 git.release --from turtle/feature-x --into main --mode plan

🌊 release: feat(ocean): add surfboards
   ├─ 🐢 1 check(s) in progress
   ├─ 🌴 automerge unfound (use --apply to add)
   └─ [dim]hint: use --apply to enable automerge and watch[/dim]
"
`;

exports[`git.release.p3.scenes.on_main.from_feat scene.7: on main branch, --from feat-branch given: [row-4] feat PR: inflight when: [watch] --from feat-branch --watch with transitions then: watch cycles then result 1`] = `
"🐢 heres the wave...

🐚 git.release --from turtle/feature-x --into main --watch

🌊 release: feat(ocean): add surfboards
   ├─ 🐢 1 check(s) in progress
   ├─ 🌴 automerge unfound (use --apply to add)
   └─ 🥥 let's watch
      ├─ 💤 1 left, Xs in action, Xs watched
      ├─ 💤 1 left, Xs in action, Xs watched
      ├─ 💤 1 left, Xs in action, Xs watched
      ├─ ... (Nx more)
      └─ ✨ done! Xm Ys in action, Xs watched
"
`;

exports[`git.release.p3.scenes.on_main.from_feat scene.7: on main branch, --from feat-branch given: [row-7] feat PR: passed:wout-automerge when: [apply] --from feat-branch --apply then: exit 0: automerge added then merged 1`] = `
"🐢 cowabunga!

🐚 git.release --from turtle/feature-x --into main --mode apply --watch

🌊 release: feat(ocean): add surfboards
   ├─ 👌 all checks passed
   ├─ 🌴 automerge enabled [added]
   └─ 🥥 let's watch
      └─ ✨ done! merged!

[dim]🐚 continue?: rhx git.release --into prod --mode apply[/dim]
"
`;

exports[`git.release.p3.scenes.on_main.from_feat scene.7: on main branch, --from feat-branch given: [row-7] feat PR: passed:wout-automerge when: [plan] --from feat-branch then: exit 0: passed, hint apply 1`] = `
"🐢 heres the wave...

🐚 git.release --from turtle/feature-x --into main --mode plan

🌊 release: feat(ocean): add surfboards
   ├─ 👌 all checks passed
   ├─ 🌴 automerge unfound (use --apply to add)
   └─ [dim]hint: use --apply to enable automerge and watch[/dim]
"
`;

exports[`git.release.p3.scenes.on_main.from_feat scene.7: on main branch, --from feat-branch given: [row-7] feat PR: passed:wout-automerge when: [watch] --from feat-branch --watch then: exit 0: passed (no watch needed) 1`] = `
"🐢 heres the wave...

🐚 git.release --from turtle/feature-x --into main --watch

🌊 release: feat(ocean): add surfboards
   ├─ 👌 all checks passed
   ├─ 🌴 automerge unfound (use --apply to add)
   └─ 🥥 let's watch
      ├─ 🫧 no runs inflight
      └─ ✨ done! Xm Ys in action, Xs watched
"
`;

exports[`git.release.p3.scenes.on_main.from_feat scene.7: on main branch, --from feat-branch given: [row-10] feat PR: passed:with-automerge when: [apply] --from feat-branch --apply then: exit 0: automerge found then merged 1`] = `
"🐢 cowabunga!

🐚 git.release --from turtle/feature-x --into main --mode apply --watch

🌊 release: feat(ocean): add surfboards
   ├─ 👌 all checks passed
   ├─ 🌴 automerge enabled [found]
   └─ 🥥 let's watch
      ├─ 🫧 no runs inflight
      └─ ✨ done! Xm Ys in action, Xs watched

[dim]🐚 continue?: rhx git.release --into prod --mode apply[/dim]
"
`;

exports[`git.release.p3.scenes.on_main.from_feat scene.7: on main branch, --from feat-branch given: [row-10] feat PR: passed:with-automerge when: [plan] --from feat-branch then: exit 0: passed, automerge found 1`] = `
"🐢 heres the wave...

🐚 git.release --from turtle/feature-x --into main --mode plan

🌊 release: feat(ocean): add surfboards
   ├─ 👌 all checks passed
   ├─ 🌴 automerge enabled [found]
   └─ [dim]hint: use --apply to watch[/dim]
"
`;

exports[`git.release.p3.scenes.on_main.from_feat scene.7: on main branch, --from feat-branch given: [row-10] feat PR: passed:with-automerge when: [watch] --from feat-branch --watch then: exit 0: watch then merged 1`] = `
"🐢 heres the wave...

🐚 git.release --from turtle/feature-x --into main --watch

🌊 release: feat(ocean): add surfboards
   ├─ 👌 all checks passed
   ├─ 🌴 automerge enabled [found]
   └─ 🥥 let's watch
      ├─ 🫧 no runs inflight
      └─ ✨ done! Xm Ys in action, Xs watched
"
`;

exports[`git.release.p3.scenes.on_main.from_feat scene.7: on main branch, --from feat-branch given: [row-13] feat PR: failed when: [apply] --from feat-branch --apply then: exit 2: failed, hint retry 1`] = `
"🐢 cowabunga!

🐚 git.release --from turtle/feature-x --into main --mode apply --watch

🌊 release: feat(ocean): add surfboards
   ├─ ⚓ 1 check(s) failed
   │  └─ 🔴 test
   │        ├─ https://github.com/test/repo/actions/runs/XXX
   │        └─ publish
   ├─ 🌴 automerge unfound (use --apply to add)
   ├─ [dim]hint: use --retry to rerun failed workflows[/dim]
   └─ [dim]hint: use rhx show.gh.test.errors to see test output[/dim]
"
`;

exports[`git.release.p3.scenes.on_main.from_feat scene.7: on main branch, --from feat-branch given: [row-13] feat PR: failed when: [plan] --from feat-branch then: exit 2: failed, hint retry 1`] = `
"🐢 heres the wave...

🐚 git.release --from turtle/feature-x --into main --mode plan

🌊 release: feat(ocean): add surfboards
   ├─ ⚓ 1 check(s) failed
   │  └─ 🔴 test
   │        ├─ https://github.com/test/repo/actions/runs/XXX
   │        └─ publish
   ├─ 🌴 automerge unfound (use --apply to add)
   ├─ [dim]hint: use --retry to rerun failed workflows[/dim]
   └─ [dim]hint: use rhx show.gh.test.errors to see test output[/dim]
"
`;

exports[`git.release.p3.scenes.on_main.from_feat scene.7: on main branch, --from feat-branch given: [row-13] feat PR: failed when: [watch] --from feat-branch --watch then: exit 2: failed, hint retry 1`] = `
"🐢 heres the wave...

🐚 git.release --from turtle/feature-x --into main --watch

🌊 release: feat(ocean): add surfboards
   ├─ ⚓ 1 check(s) failed
   │  └─ 🔴 test
   │        ├─ https://github.com/test/repo/actions/runs/XXX
   │        └─ publish
   ├─ 🌴 automerge unfound (use --apply to add)
   ├─ [dim]hint: use --retry to rerun failed workflows[/dim]
   └─ [dim]hint: use rhx show.gh.test.errors to see test output[/dim]
"
`;

exports[`git.release.p3.scenes.on_main.from_feat scene.7: on main branch, --from feat-branch given: [row-16] feat PR: failed with --retry when: [apply+retry] --from feat-branch --retry --apply then: exit 2: rerun triggered then apply 1`] = `
"🐢 cowabunga!

🐚 git.release --from turtle/feature-x --into main --mode apply --watch --retry

🌊 release: feat(ocean): add surfboards
   ├─ ⚓ 1 check(s) failed
   │  └─ 🔴 test
   │        ├─ https://github.com/test/repo/actions/runs/XXX
   │        ├─ publish
   │        └─ 👌 rerun triggered
   ├─ 🌴 automerge unfound (use --apply to add)
   └─ 🥥 let's watch
      ├─ 💤 1 left, Xs in action, Xs watched
      ├─ 💤 1 left, Xs in action, Xs watched
      ├─ ⚓ 1 check(s) failed
      │  └─ 🔴 test
      │        ├─ https://github.com/test/repo/actions/runs/XXX
      │        └─ publish
      ├─ [dim]hint: use --retry to rerun failed workflows[/dim]
      └─ [dim]hint: use rhx show.gh.test.errors to see test output[/dim]
"
`;

exports[`git.release.p3.scenes.on_main.from_feat scene.7: on main branch, --from feat-branch given: [row-16] feat PR: failed with --retry when: [plan+retry] --from feat-branch --retry then: exit 0: rerun triggered (informational) 1`] = `
"🐢 heres the wave...

🐚 git.release --from turtle/feature-x --into main --mode plan --retry

🌊 release: feat(ocean): add surfboards
   ├─ ⚓ 1 check(s) failed
   │  └─ 🔴 test
   │        ├─ https://github.com/test/repo/actions/runs/XXX
   │        ├─ publish
   │        └─ 👌 rerun triggered
   ├─ 🌴 automerge unfound (use --apply to add)
   └─ [dim]hint: use --watch to monitor rerun progress[/dim]
"
`;

exports[`git.release.p3.scenes.on_main.from_feat scene.7: on main branch, --from feat-branch given: [row-16] feat PR: failed with --retry when: [watch+retry] --from feat-branch --retry --watch then: exit 2: rerun triggered then watch 1`] = `
"🐢 heres the wave...

🐚 git.release --from turtle/feature-x --into main --watch --retry

🌊 release: feat(ocean): add surfboards
   ├─ ⚓ 1 check(s) failed
   │  └─ 🔴 test
   │        ├─ https://github.com/test/repo/actions/runs/XXX
   │        ├─ publish
   │        └─ 👌 rerun triggered
   ├─ 🌴 automerge unfound (use --apply to add)
   └─ 🥥 let's watch
      ├─ 💤 1 left, Xs in action, Xs watched
      ├─ 💤 1 left, Xs in action, Xs watched
      ├─ ⚓ 1 check(s) failed
      │  └─ 🔴 test
      │        ├─ https://github.com/test/repo/actions/runs/XXX
      │        └─ publish
      ├─ [dim]hint: use --retry to rerun failed workflows[/dim]
      └─ [dim]hint: use rhx show.gh.test.errors to see test output[/dim]
"
`;

exports[`git.release.p3.scenes.on_main.from_feat scene.7: on main branch, --from feat-branch given: [row-19] feat PR: rebase:behind when: [apply] --from feat-branch --apply then: exit 2: needs rebase 1`] = `
"🐢 cowabunga!

🐚 git.release --from turtle/feature-x --into main --mode apply --watch

🌊 release: feat(ocean): add surfboards
   ├─ 👌 all checks passed
   ├─ 🐚 needs rebase
   │  └─ [dim]hint: rhx git.branch.rebase begin[/dim]
   └─ 🌴 automerge unfound (use --apply to add)
"
`;

exports[`git.release.p3.scenes.on_main.from_feat scene.7: on main branch, --from feat-branch given: [row-19] feat PR: rebase:behind when: [plan] --from feat-branch then: exit 2: needs rebase 1`] = `
"🐢 heres the wave...

🐚 git.release --from turtle/feature-x --into main --mode plan

🌊 release: feat(ocean): add surfboards
   ├─ 👌 all checks passed
   ├─ 🐚 needs rebase
   │  └─ [dim]hint: rhx git.branch.rebase begin[/dim]
   └─ 🌴 automerge unfound (use --apply to add)
"
`;

exports[`git.release.p3.scenes.on_main.from_feat scene.7: on main branch, --from feat-branch given: [row-19] feat PR: rebase:behind when: [watch] --from feat-branch --watch then: exit 2: needs rebase 1`] = `
"🐢 heres the wave...

🐚 git.release --from turtle/feature-x --into main --watch

🌊 release: feat(ocean): add surfboards
   ├─ 👌 all checks passed
   ├─ 🐚 needs rebase
   │  └─ [dim]hint: rhx git.branch.rebase begin[/dim]
   └─ 🌴 automerge unfound (use --apply to add)
"
`;

exports[`git.release.p3.scenes.on_main.from_feat scene.7: on main branch, --from feat-branch given: [row-22] feat PR: rebase:dirty when: [apply] --from feat-branch --apply then: exit 2: needs rebase with conflicts 1`] = `
"🐢 cowabunga!

🐚 git.release --from turtle/feature-x --into main --mode apply --watch

🌊 release: feat(ocean): add surfboards
   ├─ 👌 all checks passed
   ├─ 🐚 needs rebase, has conflicts
   │  └─ [dim]hint: rhx git.branch.rebase begin[/dim]
   └─ 🌴 automerge unfound (use --apply to add)
"
`;

exports[`git.release.p3.scenes.on_main.from_feat scene.7: on main branch, --from feat-branch given: [row-22] feat PR: rebase:dirty when: [plan] --from feat-branch then: exit 2: needs rebase with conflicts 1`] = `
"🐢 heres the wave...

🐚 git.release --from turtle/feature-x --into main --mode plan

🌊 release: feat(ocean): add surfboards
   ├─ 👌 all checks passed
   ├─ 🐚 needs rebase, has conflicts
   │  └─ [dim]hint: rhx git.branch.rebase begin[/dim]
   └─ 🌴 automerge unfound (use --apply to add)
"
`;

exports[`git.release.p3.scenes.on_main.from_feat scene.7: on main branch, --from feat-branch given: [row-22] feat PR: rebase:dirty when: [watch] --from feat-branch --watch then: exit 2: needs rebase with conflicts 1`] = `
"🐢 heres the wave...

🐚 git.release --from turtle/feature-x --into main --watch

🌊 release: feat(ocean): add surfboards
   ├─ 👌 all checks passed
   ├─ 🐚 needs rebase, has conflicts
   │  └─ [dim]hint: rhx git.branch.rebase begin[/dim]
   └─ 🌴 automerge unfound (use --apply to add)
"
`;

exports[`git.release.p3.scenes.on_main.from_feat scene.7: on main branch, --from feat-branch given: [row-25] feat PR: merged when: [apply] --from feat-branch --apply then: exit 0: already merged 1`] = `
"🐢 cowabunga!

🐚 git.release --from turtle/feature-x --into main --mode apply --watch

🌊 release: feat(ocean): add surfboards
   ├─ 👌 all checks passed
   └─ 🌴 already merged

[dim]🐚 continue?: rhx git.release --into prod --mode apply[/dim]
"
`;

exports[`git.release.p3.scenes.on_main.from_feat scene.7: on main branch, --from feat-branch given: [row-25] feat PR: merged when: [plan] --from feat-branch then: exit 0: already merged 1`] = `
"🐢 heres the wave...

🐚 git.release --from turtle/feature-x --into main --mode plan

🌊 release: feat(ocean): add surfboards
   ├─ 👌 all checks passed
   └─ 🌴 already merged
"
`;

exports[`git.release.p3.scenes.on_main.from_feat scene.7: on main branch, --from feat-branch given: [row-25] feat PR: merged when: [watch] --from feat-branch --watch then: exit 0: already merged 1`] = `
"🐢 heres the wave...

🐚 git.release --from turtle/feature-x --into main --watch

🌊 release: feat(ocean): add surfboards
   ├─ 👌 all checks passed
   └─ 🌴 already merged
"
`;
